@@ -28,7 +28,7 @@ public class ToUci {
         var position = new Position();
         var uciMove = PGNHandler.toUCI(position, sanMove).orElseThrow();
         var expectedUCIMove = "e2e4";
-        logger.debug("expectedUCIMove = %s, uciMove = %s".formatted(expectedUCIMove, uciMove));
+        logger.debug(String.format("expectedUCIMove = %s, uciMove = %s", expectedUCIMove, uciMove));
         assertEquals(expectedUCIMove, uciMove);
     }
 
@@ -38,7 +38,7 @@ public class ToUci {
         var position = new Position("rnbqkb1r/ppp2ppp/3p1n2/4p3/2B1P3/5N2/PPPP1PPP/RNBQK2R w KQkq - 0 4");
         var uciMove = PGNHandler.toUCI(position, sanMove).orElseThrow();
         var expectedUCIMove = "e1g1";
-        logger.debug("expectedUCIMove = %s, uciMove = %s".formatted(expectedUCIMove, uciMove));
+        logger.debug(String.format("expectedUCIMove = %s, uciMove = %s", expectedUCIMove, uciMove));
         assertEquals(expectedUCIMove, uciMove);
     }
 
@@ -48,7 +48,7 @@ public class ToUci {
 		var position = new Position("r2q1rk1/pppbbppp/2np1n2/4p3/2B1P3/2NPBN2/PPPQ1PPP/R3K2R w KQ - 0 8");
 		var uciMove = PGNHandler.toUCI(position, sanMove).orElseThrow();
 		var expectedUCIMove = "e1c1";
-        logger.debug("expectedUCIMove = %s, uciMove = %s".formatted(expectedUCIMove, uciMove));
+        logger.debug(String.format("expectedUCIMove = %s, uciMove = %s", expectedUCIMove, uciMove));
 		assertEquals(expectedUCIMove, uciMove);
     }
 
@@ -58,7 +58,7 @@ public class ToUci {
         var position = new Position("8/1k1KP3/8/8/8/8/8/8 w - - 0 0");
         var uciMove = PGNHandler.toUCI(position, sanMove).orElseThrow();
         var expectedUCIMove = "e7e8q";
-        logger.debug("expectedUCIMove = %s, uciMove = %s".formatted(expectedUCIMove, uciMove));
+        logger.debug(String.format("expectedUCIMove = %s, uciMove = %s", expectedUCIMove, uciMove));
         assertEquals(expectedUCIMove, uciMove);
     }
 
@@ -68,7 +68,7 @@ public class ToUci {
         var position = new Position("rn2r1k1/5b1p/p1q5/2b5/1P2pQ2/P3P3/1B3PPP/3R2K1 w - - 0 28");
         var uciMove = PGNHandler.toUCI(position, sanMove).orElseThrow();
         var expectedUCIMove = "b6c5";
-        logger.debug("expectedUCIMove = %s, uciMove = %s".formatted(expectedUCIMove, uciMove));
+        logger.debug(String.format("expectedUCIMove = %s, uciMove = %s", expectedUCIMove, uciMove));
         assertEquals(expectedUCIMove, uciMove);
     }
 }
